# open-task-framework

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS  CHANGELOG.md  Dockerfile  Dockerfile.dev  Pipfile  README.md  all-addons.code-workspace  codecov.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_test_pre_commit.txt  setup.py
.devcontainer/: devcontainer.json
.devcontainer/otf-addons/: devcontainer.json  download-repos.sh  otf-addons.txt
.github/: CODEOWNERS
.github/workflows/: daily_test.yml  main.yml  python_lint.yml  python_test.yml  test.yml  unittest.yml
docs/: addons.md  architecture.md  overview.md  plugins.md  remotehandlers.md  task-types.md  taskhandlers.md  usage.md
docs/plugins/: lookup.md
examples/: variables.json.j2
examples/transfers/: scp-with-password-pull.example.json  scp-with-password.example.json  scp-with-password.json
opentaskframework/taskhandlers/: transfer.py
opentaskpy/: remoteinit.py
opentaskpy/remotehandlers/: ssh.py
opentaskpy/remotehandlers/scripts/: transfer.py
opentaskpy/taskhandlers/: transfer.py
src/: setup.py
src/opentaskpy/: exceptions.py  logging.py  otflogging.py  setup.py  task_run.py  taskrun.py
src/opentaskpy/cli/: batch_validator.py  task_run.py
src/opentaskpy/config/: loader.py  schemas.py
src/opentaskpy/config/schemas/: batch.json  cacheable_variables.json
src/opentaskpy/config/schemas/batch/: tasks.json
src/opentaskpy/config/schemas/execution/local/: local.json  protocol.json
src/opentaskpy/config/schemas/execution/ssh/: protocol.json  ssh.json
src/opentaskpy/config/schemas/transfer/: dummy_source.json  email_destination.json  encryption.json  local_destination.json  local_source.json  sftp_destination.json  sftp_source.json  ssh_destination.json  ssh_source.json
src/opentaskpy/config/schemas/transfer/dummy_source/: protocol.json
src/opentaskpy/config/schemas/transfer/email/: protocol.json  rename.json
src/opentaskpy/config/schemas/transfer/local_destination/: flags.json  permissions.json  protocol.json  rename.json
src/opentaskpy/config/schemas/transfer/local_source/: conditionals.json  fileWatch.json  postCopyAction.json  protocol.json
src/opentaskpy/config/schemas/transfer/sftp_destination/: flags.json  permissions.json  protocol.json  rename.json
src/opentaskpy/config/schemas/transfer/sftp_source/: conditionals.json  fileWatch.json  logWatch.json  postCopyAction.json  protocol.json
src/opentaskpy/config/schemas/transfer/ssh_destination/: flags.json  permissions.json  protocol.json  rename.json
src/opentaskpy/config/schemas/transfer/ssh_source/: conditionals.json  fileWatch.json  logWatch.json  postCopyAction.json  protocol.json
src/opentaskpy/config/variablecaching/: cache_utils.py  file.py
src/opentaskpy/filters/: default_filters.py
src/opentaskpy/plugins/lookup/: file.py  http_json.py  random.py  random_number.py
src/opentaskpy/remotehandlers/: dummy.py  email.py  local.py  remotehandler.py  sftp.py  ssh.py  ssh_utils.py
src/opentaskpy/remotehandlers/scripts/: transfer.py
src/opentaskpy/taskhandlers/: batch.py  execution.py  taskhandler.py  transfer.py
src/tests/: file_helper.py  test_config_loader.py  test_file_helper.py  test_logging.py  test_plugin_file.py  test_plugin_http_json.py  test_remote_transfer_script.py  test_task_run.py  test_taskhandler_batch.py  test_taskhandler_execution.py  test_taskhandler_transfer.py
test/: createTestDirectories.sh  createTestFiles.sh  docker-compose.yml  setupSSHKeys.sh  sshd_config.sftp
test/cfg/: variables.json.j2
test/cfg/addons/custom/: test_addon.py
test/cfg/batch/: AM-test-.json  AM-test.json  batch-15-sftp.json  batch-basic-invalid-execution-host.json  batch-basic-timeout.json  batch-basic.json  batch-dependencies-complex-fail.json  batch-dependencies-complex.json  batch-dependencies-continue-on-fail.json  batch-dependencies-fail-no-retry.json  batch-dependencies-fail-retry.json  batch-dependencies.json  batch-parallel-dependencies.json  batch-parallel.json  test-batch.json
test/cfg/executions/: df-invalid-host.json  df-local.json  df.json  exit-1-local.json  fail-command.json  sleep-300-local.json  sleep-300.json  sleep-5-local.json  sleep-5.json  sleep-7-local.json  touch.json
test/cfg/filters/: custom_ordinal_date.py  md5.py
test/cfg/plugins/lookup/: test_plugin.py
test/cfg/transfers/: decrypt-file-1-sftp.json.j2  decrypt-file-2-sftp.json.j2  email-transfer.json  encrypt-file-1-sftp.json.j2  encrypt-file-2-sftp.json.j2  filewatch-300-sftp.json  filewatch-300.json  filewatch-5-error-sftp.json  filewatch-local-300.json  local-basic.json  scp-basic-multiple-dests.json  scp-basic-no-error-1.json  scp-basic-no-error.json  scp-basic-pca-delete.json  scp-basic-pca-move.json  scp-basic-pull.json  scp-basic-ssh-vars.json.j2  scp-basic.json  scp-file-watch.json  scp-log-watch-tail.json  scp-log-watch.json  scp-source-file-conditions.json  sftp-basic.json  sftp-timeout-long.json  sftp-timeout.json
tests/: _test_encryption.py  conftest.py  file_helper.py  test_batch_schema_validate.py  test_batch_validator.py  test_cacheable_variable_file.py  test_config_loader.py  test_docker_task_run.py  test_dummy_transfer_schema_validate.py  test_email_transfer_schema_validate.py  test_file_helper.py  test_logging.py  test_memory_large_file_transfer.py  test_plugin_file.py  test_plugin_http_json.py  test_remote_transfer_script.py  test_remotehandler.py  test_schema_validate.py  test_ssh_dest_schema_validate.py  test_ssh_execution_schema_validate.py  test_ssh_source_schema_validate.py  test_task_run.py  test_taskhandler_batch.py  test_taskhandler_batch_encryption.py  test_taskhandler_execution.py  test_taskhandler_execution_custom_addon.py  test_taskhandler_execution_local.py  test_taskhandler_execution_ssh.py  test_taskhandler_transfer.py  test_taskhandler_transfer_dummy.py  test_taskhandler_transfer_email.py  test_taskhandler_transfer_local.py  test_taskhandler_transfer_sftp.py  test_taskhandler_transfer_ssh.py
tests/fixtures/: pgp.py  ssh_clients.py
(+2 files in other folders)
