[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentaskpy"
version = "0.4.2"
authors = [
  { name="Adam McDonagh", email="adam@elitemonkey.net" },
]
license = { text = "GPLv3" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
]
keywords = ["automation", "task", "framework", "scheduling", "ssh", "sftp", "remote", "execution", "command"]
dependencies = [
  "jinja2 >= 3.1",
  "jsonpath-ng >= 1.5",
  "jsonschema >= 4.17",
  "paramiko >= 3.0",
  "requests >= 2.28"
]
description = "A framework for automation execution of commands and transferring files between hosts"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "flake8",
  "black >= 23.1.0",
  "flake8-bugbear",
  "pep8-naming",
  "flake8-use-fstring",
  "flake8-black",
  "isort",
  "flake8-isort",
  "pytest",
  "bumpver",
  "pytest-shell",
  "lovely-pytest-docker",
]

[project.urls]
"Homepage" = "https://github.com/adammcdonagh/open-task-framework"
"Bug Tracker" = "https://github.com/adammcdonagh/open-task-framework/issues"

[project.scripts]
task-run = "opentaskpy.cli.task_run:main"

[tool.isort]
profile = 'black'

[tool.bumpver]
current_version = "0.4.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]